syntax = "proto3";

package device.v1;


message Device {
  int32 id = 1;
  string uuid = 2;
  string mac = 3;
  string firmware = 4;
  string created_at = 5;
  string updated_at = 6;
}

message CreateDeviceRequest {
  string mac = 1;
  string firmware = 2;
}

message CreateDeviceResponse {
  Device device = 1;
}

message GetDevicesRequest {}

message GetDevicesResponse {
  repeated Device devices = 1;
}

service CloudService {
  rpc CreateDevice(CreateDeviceRequest) returns (CreateDeviceResponse) {}
  rpc GetDevices(GetDevicesRequest) returns (GetDevicesResponse) {}
}